compiler/testData/diagnostics/tests/dataClasses/dataClassOverridingCopy_lv12.kt
// !LANGUAGE: -ProhibitDataClassesOverridingCopy

interface WithCopy<T> {
    fun copy(str: T): WithCopy<T>
}

<!DATA_CLASS_OVERRIDE_DEFAULT_VALUES_WARNING!>data<!> class Test(konst str: String): WithCopy<String>